# recall-pro

./: .env  .gitignore  DOCKER_README.md  MICROSERVICES_README.md  Makefile  README.md  docker-compose.yml  env.example
database-service/: Dockerfile  README.md  pyproject.toml
database-service/src/: crud.py  database.py  main.py  models.py  schemas.py
database-service/src/routers/: tokens.py  users.py
deck-service/: README.md  task.todo
init-db/: 01-init.sql
user-service/: Dockerfile  README.md  pyproject.toml
user-service/src/: auth_service.py  database_client.py  main.py  schemas.py
user-service/src/routers/: auth.py
