[tool.poetry]
name = "database-service"
version = "0.1.0"
description = "Database microservice for Recall Pro"
authors = ["MordXD <kotkinegor78@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = ">=2.0.41,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
pydantic = ">=2.0.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1" 