[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "User management microservice for Recall Pro"
authors = ["MordXD <kotkinegor78@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
python-jose = ">=3.5.0,<4.0.0"
passlib = ">=1.7.4,<2.0.0"
uvicorn = ">=0.34.2,<0.35.0"
bcrypt = ">=4.0.0,<5.0.0"
python-multipart = ">=0.0.6,<1.0.0"
httpx = ">=0.28.0,<0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

